fixed running from gradle